# PriceTracker

./: .env.example  .gitignore  ADMIN_ACCESS.md  AGENTS.md  AGENT_COORDINATION.md  AGENT_TASKS.md  ARCHITECTURE.md  CLAUDE.md  DEPLOYMENT.md  FINAL_STATUS.md  IMPLEMENTATION_STATUS.md  INTEGRATION_TEST_SUMMARY.md  LOGGING_STANDARDS.md  PATTERN_GENERATION_GUIDE.md  README.md  README_NEXT_STEPS.md  db.sqlite3.backup  docker-compose.prod.yml  docker-compose.yml
.beads/: issues.jsonl
.claude/: settings.json
.transcripts/: session_20251214_130417_24ae1148.txt  session_20251214_141015_de77583a.txt  session_20251214_141400_293549c0.txt  session_20251214_141407_b50f2ec3.txt
ExtractorPatternAgent/: .gitignore  ARCHITECTURE.md  Dockerfile  FIELDS_GUIDE.md  IMPLEMENTATION_STATUS.md  PATTERN_CREATION_GUIDE.md  PLAN_fetch_and_capture.md  QUICKSTART.md  README.md  TASK_FIX_HEADLESS_MODE.md  __init__.py  convert_json_to_python.py  extractor-cli.py  fetch_and_capture.py  generate_pattern.py  pyproject.toml  requirements.txt
ExtractorPatternAgent/config/: settings.yaml
ExtractorPatternAgent/examples/: advanced_usage.py  basic_usage.py
ExtractorPatternAgent/generated_extractors/: ALIEXPRESS_TESTING.md  README.md  __init__.py  _base.py  aliexpress_com.py  amazon_com.py  elkjop_no.py  example_com.py  farmasiet_no.py  feturax_com.py  finn_no.py  hismith_com.py  komplett_no.py  libidex_com.py  med24_no.py  motorbunny_com.py  netonnet_no.py  oda_com.py  power_no.py  proshop_no.py  skinister_com.py  store_steampowered_com.py  versions.json  www_bangerhead_no.py  www_blivakker_no.py  www_brightandshinystore_com.py  www_dreammask_net.py  www_hair247_no.py  www_sinful_no.py  www_uniqso_com.py
ExtractorPatternAgent/scripts/: __init__.py  fetch_sample.py  test_extractor.py
ExtractorPatternAgent/src/: __init__.py  agent.py  pattern_generator.py
ExtractorPatternAgent/src/models/: __init__.py  pattern.py  validation.py
ExtractorPatternAgent/src/tools/: __init__.py  browser.py  parser.py  storage.py  validator.py
ExtractorPatternAgent/src/utils/: __init__.py  html_utils.py  selector_utils.py  stealth.py
ExtractorPatternAgent/test_data/: README.md
ExtractorPatternAgent/tests/: __init__.py  conftest.py  test_agent.py  test_extractor_registry.py  test_storage_direct.py  test_storage_integration.py  test_tools.py
PriceFetcher/: .gitignore  ARCHITECTURE.md  Dockerfile  IMPLEMENTATION.md  IMPLEMENTATION_STATUS.md  IMPORT_FIX_SUMMARY.md  PHASE2_IMPLEMENTATION.md  README.md  TASK_FIX_MODULE_IMPORTS.md  amazon_product_page.html  pyproject.toml  test_amazon_with_enhanced_stealth.py
PriceFetcher/config/: __init__.py  settings.yaml
PriceFetcher/scripts/: backfill_images.py  run_fetch.py  setup_cron.sh
PriceFetcher/src/: __init__.py  __main__.py  celery_api.py  extractor.py  fetcher.py  git_utils.py  models.py  pattern_loader.py  stealth.py  storage.py  validator.py
PriceFetcher/tests/: __init__.py  test_extractor.py  test_validator.py  test_version_tracking.py
WebUI/: .gitignore  ARCHITECTURE.md  DOCKER_INTEGRATION_RESULTS.md  Dockerfile  Dockerfile.prod  README.md  (+15 more)
(+171 files in other folders)
