[project]
name = "extractorpatternagent"
version = "0.1.0"
description = "AI-powered web scraping pattern generator using Claude"
requires-python = ">=3.12"
dependencies = [
    "claude-agent-sdk>=0.1.0",
    "playwright>=1.40.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.0.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "pyyaml>=6.0",
    "django>=4.2.0,<5.0",
    "celery>=5.3.0",
    "redis>=5.0.0",
    "httpx>=0.24.0",
    "structlog>=23.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
